--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
         "server": "node server/index.js"
     },
     "dependencies": {
-        "vue": "^3.4.0",
-        "vue-router": "^4.2.5",
-        "express": "^4.18.2",
+        "better-sqlite3": "^11.7.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "better-sqlite3": "^11.7.0"
+        "express": "^4.18.2",
+        "vue": "^3.4.0",
+        "vue-router": "^4.2.5"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.0",
-        "typescript": "^5.3.3",
+        "typescript": "^5.9.3",
         "vite": "^5.0.0",
-        "vue-tsc": "^1.8.27"
+        "vue-tsc": "^3.2.3"
     }
 }
