--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,9 @@ dist-ssr
 *.sw?
 
 # Environment variables
-.env
-.env.local
-.env.*.local
+# .env
+# .env.local
+# .env.*.local
 
 # Database files
 *.sqlite
